force-app/main/default/objects/Order_Item__c/validationRules/Quantity_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorMessage>A quantidade deve ser maior que zero.</errorMessage>
</ValidationRule>